# QT-Player

./: AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.cpp  PlayerController.h  TextButton.qml  main.cpp
